[package]
name = "mitm"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
async-trait="0.1"
# Replaced with dependency bellow 
# pingora = { version = "0.5", features = ["lb", "openssl"] }
pingora-core = "0.5"
env_logger = "0.11.8"
clap = { version = "4.5", features = ["derive"] }
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
pingora-openssl = "0.5.0"
openssl = "0.10.73"
dashmap = "6.1.0"
tokio = { version = "1.45", features = ["full"] }
time = "0.3.41"

# This is a rebased (to 0.5.0) fork of the fork: https://github.com/pszabop/pingora
# See issue: https://github.com/cloudflare/pingora/issues/547
[dependencies.pingora]
git = "https://github.com/dsundquist/pingora.git"
branch = "add-sni"
features = ["openssl", "lb"]
