[package]
name = "mitm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait="0.1"
# This fork contains a pull request to resolve Windows support
# See issue: https://github.com/cloudflare/pingora/issues/425
pingora = { branch="windows-support", git = "https://github.com/dsundquist/pingora.git", features = ["openssl", "lb"] }
pingora-core = { branch="windows-support", git = "https://github.com/dsundquist/pingora.git"}
pingora-openssl = { branch="windows-support", git = "https://github.com/dsundquist/pingora.git"}
env_logger = "0.11.8"
clap = { version = "4.5", features = ["derive"] }
openssl = "0.10.73"
dashmap = "6.1.0"
tokio = { version = "1.45", features = ["full"] }
dirs = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }